--- a/ImageTransformation/ImageTransformation.vbproj
+++ b/ImageTransformation/ImageTransformation.vbproj
@@ -259,10 +259,13 @@
     <Content Include="Content\themes\basic\assets\fonts\icons.ttf" />
     <Content Include="Content\themes\basic\assets\fonts\icons.eot" />
     <None Include="Scripts\jquery-1.8.1.intellisense.js" />
+    <Content Include="processImg.aspx" />
     <Content Include="Scripts\jquery-1.8.1.js" />
     <Content Include="Scripts\jquery-1.8.1.min.js" />
     <Content Include="Scripts\semantic.js" />
     <Content Include="Scripts\semantic.min.js" />
+    <Content Include="source.png" />
+    <Content Include="testPage.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -295,12 +298,26 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="processImg.aspx.designer.vb">
+      <DependentUpon>processImg.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="processImg.aspx.vb">
+      <DependentUpon>processImg.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="Site.Master.designer.vb">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.vb">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="testPage.aspx.designer.vb">
+      <DependentUpon>testPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="testPage.aspx.vb">
+      <DependentUpon>testPage.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
